fix: decreased hashtag white space

--- a/src/app/features/create-event/event-details-form/event-details-form.component.scss
+++ b/src/app/features/create-event/event-details-form/event-details-form.component.scss
@@ -39,3 +39,8 @@
     width: 100%;
   }
 }
+
+//decreasing hashtag whitespace
+::ng-deep .mdc-evolution-chip__graphic {
+  padding-right: 0 !important;
+}
